--- a/CuantoCuesta/CuantoCuesta/app/src/main/res/values/colors.xml
+++ b/CuantoCuesta/CuantoCuesta/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
+    <color name="background_icon">#ff0000</color>
 
 </resources>
