--- a/SayTheWord/SayTheWord_v2/app/src/main/res/values/colors.xml
+++ b/SayTheWord/SayTheWord_v2/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+	<color name="colorPrimary">#008577</color>
+	<color name="colorPrimaryDark">#00574B</color>
+	<color name="colorAccent">#E8151C</color>
+	<color name="colorDificultadDificil">#FD0006</color>
+	<color name="colorDificultadFacil">#43A047</color>
+	<color name="colorDificultadNormal">#ADADAD</color>
 </resources>
