--- a/SayTheWord/SayTheWord_v2/app/src/main/res/values/themes.xml
+++ b/SayTheWord/SayTheWord_v2/app/src/main/res/values/themes.xml
@@ -1,7 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.SayTheWord" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.SayTheWord" parent="@style/Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your light theme here. -->
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
