--- a/SayTheWord/SayTheWord_v2/app/src/main/res/layout/fragment_juego_configuracion_inicial.xml
+++ b/SayTheWord/SayTheWord_v2/app/src/main/res/layout/fragment_juego_configuracion_inicial.xml
@@ -38,18 +38,26 @@
 					app:layout_constraintStart_toStartOf="parent"
 					app:layout_constraintTop_toTopOf="parent">
 
-					<RadioButton
-						android:id="@+id/rdVisualizacion"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="Visualización" />
+					<androidx.constraintlayout.widget.ConstraintLayout
+						android:layout_width="match_parent"
+						android:layout_height="match_parent">
+
+						<RadioButton
+							android:id="@+id/rdVisualizacion"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:text="Visualización"
+							app:layout_constraintStart_toStartOf="parent" />
+
+						<RadioButton
+							android:id="@+id/rbEscritura"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:text="Escritura"
+							app:layout_constraintEnd_toEndOf="parent" />
+					</androidx.constraintlayout.widget.ConstraintLayout>
 
 
-					<RadioButton
-						android:id="@+id/rbEscritura"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="Escritura" />
 				</RadioGroup>
 
 				<RadioGroup
