--- a/CuantoCuesta/CuantoCuesta_v2/app/src/main/res/values/colors.xml
+++ b/CuantoCuesta/CuantoCuesta_v2/app/src/main/res/values/colors.xml
@@ -2,4 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary">#F44336</color>
+    <color name="primary_dark">#D32F2F</color>
+    <color name="primary_light">#FFCDD2</color>
+    <color name="accent">#00BCD4</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#BDBDBD</color>
+    <color name="background_icon">#ff0000</color>
 </resources>
