--- a/CuantoCuesta/CuantoCuesta_v2/app/src/main/res/values/themes.xml
+++ b/CuantoCuesta/CuantoCuesta_v2/app/src/main/res/values/themes.xml
@@ -1,7 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.CuantoCuesta_v2" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.CuantoCuesta_v2" parent="@style/Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your light theme here. -->
+        <item name="colorAccent">@color/accent</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
