--- a/CuantoCuesta/CuantoCuesta_v2/app/src/main/res/values-night/themes.xml
+++ b/CuantoCuesta/CuantoCuesta_v2/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.CuantoCuesta_v2" parent="@style/Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Base.Theme.CuantoCuesta_v2" parent="@style/Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorAccent">@color/accent</item>
         <item name="colorPrimary">@color/primary</item>
