--- a/CuantoCuesta/CuantoCuesta_v2/app/src/main/res/values-night/themes.xml
+++ b/CuantoCuesta/CuantoCuesta_v2/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.CuantoCuesta_v2" parent="@style/Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Base.Theme.CuantoCuesta" parent="@style/Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorAccent">@color/accent</item>
         <item name="colorPrimary">@color/primary</item>
@@ -8,5 +8,5 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.CuantoCuesta_v2" parent="Base.Theme.CuantoCuesta_v2" />
+    <style name="Theme.CuantoCuesta" parent="Base.Theme.CuantoCuesta" />
 </resources>
