--- a/Google Sheets Api/EditGoogleSheets_v8/app/src/main/res/values/themes.xml
+++ b/Google Sheets Api/EditGoogleSheets_v8/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.EditGoogleSheets_v8" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.EditGoogleSheets" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.EditGoogleSheets_v8" parent="Base.Theme.EditGoogleSheets_v8" />
+    <style name="Theme.EditGoogleSheets" parent="Base.Theme.EditGoogleSheets" />
 </resources>
